--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 #database
-spring.datasource.url=jdbc:mysql://182.254.217.94:3306/bob?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://118.89.103.224:3306/bob?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=zyydcyy
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # LOGGING
 logging.config= src/main/resources/log4j2.xml
+
+# Spring Web
+spring.mvc.view.suffix=.jsp
+spring.mvc.view.prefix=/WEB-INF/jsp/
+#spring.mvc.view.suffix: .jsp
+application.hello=Hello Angel From application
